getQuestionsWithTagFilter and refactor QuestionSpecification lauraye27/miw-frontend-foro#28